--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ button {
   border: unset;
   border-radius: 4px;
   outline-color: rgb(84 105 212 / 0.5);
-
   background-color: #5E81AC;
     box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
                 rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
@@ -20,6 +19,7 @@ button {
     font-weight: 600;
     cursor: pointer;
 }
+
 
 bottom-line {
   font-size: 5px;
@@ -89,6 +89,7 @@ a {
     margin: 0 -2%;
     transform: rotate(-12deg) skew(-12deg);
 }
+
 .box-divider--light-all-2 {
     box-shadow: inset 0 0 0 2px #e3e8ee;
 }
@@ -126,7 +127,6 @@ a {
   padding-bottom: 15px;
 }
 
-
 .flex-justifyContent--center {
   -ms-flex-pack: center;
   justify-content: center;
@@ -149,15 +149,7 @@ span {
 label {
     margin-bottom: 10px;
 }
-.reset-pass a,label {
-    font-size: 14px;
-    font-weight: 600;
-    display: block;
-}
-.reset-pass > a {
-    text-align: right;
-    margin-bottom: 10px;
-}
+
 .grid--50-50 {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -183,80 +175,12 @@ label {
                 rgba(0, 0, 0, 0) 0px 0px 0px 0px;
 }
 
-input[type="submit"] {
-    background-color: rgb(84, 105, 212);
-    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
-                rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
-                rgba(0, 0, 0, 0.12) 0px 1px 1px 0px, 
-                rgb(84, 105, 212) 0px 0px 0px 1px, 
-                rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
-                rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
-                rgba(60, 66, 87, 0.08) 0px 2px 5px 0px;
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
-}
-.field-checkbox input {
-    width: 20px;
-    height: 15px;
-    margin-right: 5px; 
-    box-shadow: unset;
-    min-height: unset;
-}
-.field-checkbox label {
-    display: flex;
-    align-items: center;
-    margin: 0;
-}
-a.ssolink {
-    display: block;
-    text-align: center;
-    font-weight: 600;
-}
-.footer-link span {
-    font-size: 14px;
-    text-align: center;
-}
-.listing a {
-    color: #697386;
-    font-weight: 600;
-    margin: 0 10px;
-}
 
-.animationRightLeft {
-  animation: animationRightLeft 2s ease-in-out infinite;
+.copyleft {
+  transform: rotate(180deg);
+  display: inline-block;
+  font-size: 12px;
+  line-height: 12px;
+  position: relative;
+  color: #1a1f36;
 }
-.animationLeftRight {
-  animation: animationLeftRight 2s ease-in-out infinite;
-}
-.tans3s {
-  animation: animationLeftRight 3s ease-in-out infinite;
-}
-.tans4s {
-  animation: animationLeftRight 4s ease-in-out infinite;
-}
-
-@keyframes animationLeftRight {
-  0% {
-    transform: translateX(0px);
-  }
-  50% {
-    transform: translateX(1000px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
-} 
-
-@keyframes animationRightLeft {
-  0% {
-    transform: translateX(0px);
-  }
-  50% {
-    transform: translateX(-1000px);
-  }
-  100% {
-    transform: translateX(0px);
-  }
-} 
-
