--- a/assets/admissions.css
+++ b/assets/admissions.css
@@ -669,8 +669,6 @@ p.error,
 #form_response_banner {
 	display: inline-block;
 }
-
-
 input[type="text"],
 input:not([type]),
 textarea {
@@ -678,6 +676,8 @@ textarea {
 	font-size: 16px;
 	width: 200px;
 }
+
+
 
 select {
 	padding: .4rem;
@@ -872,3 +872,10 @@ tbody>tr>td {
 		display: block;
 	}
 }
+
+.copyleft {
+		transform: rotate(180deg);
+		display: inline-block;
+		position: relative;
+		color: #1a1f36;
+	}
