--- a/assets/style.css
+++ b/assets/style.css
@@ -90,7 +90,7 @@ tr {
 }
 
 .title {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman' '黑体' Times, serif;
 }
 
 .hint {
