--- a/assets/portal.css
+++ b/assets/portal.css
@@ -253,14 +253,14 @@ img {
 }
 
 #section-header h2 {
-	font: 18px "Roboto", "Arial Black", sans-serif;
+	font: 18px  sans-serif;
 	font-weight: 700;
 	text-transform: none;
 	margin-bottom: 0;
 }
 
 .content-full a {
-	font-family: "Roboto", "Arial Black", sans-serif;
+	font-family:  sans-serif;
 	font-weight: 700;
 	color: #457b9d;
 	text-decoration: none;
@@ -272,7 +272,7 @@ img {
 
 .content-full strong,
 .content-full b {
-	font-family: "Roboto", "Arial Black", sans-serif;
+	font-family:  sans-serif;
 	font-weight: 700;
 }
 
@@ -289,7 +289,7 @@ img {
 .content-full i strong,
 .content-full b i,
 .content-full i b {
-	font-family: "Roboto", "Arial Black", sans-serif;
+	font-family:  sans-serif;
 	font-style: italic;
 	font-weight: 700;
 }
@@ -353,7 +353,7 @@ header {
 #top-bar {
 	background: #1d3557;
 	padding: 0;
-	font: 12px/1.4em "Roboto", "Arial Black", sans-serif;
+	font: 12px/1.4em  sans-serif;
 	font-weight: 700;
 }
 
@@ -642,7 +642,7 @@ select {
 button[type="button"],
 .action .default,
 .action .button {
-	font: 16px "Roboto", "Arial Black", sans-serif !important;
+	font: 16px  sans-serif !important;
 	font-weight: 700;
 	color: #fff !important;
 	background: #457b9d !important;
@@ -843,32 +843,21 @@ tbody>tr>td {
 	color: #1a1f36;
 }
 
-datalist {
-	position: absolute;
-	max-height: 20em;
-	border: 0 none;
-	overflow-x: hidden;
-	overflow-y: auto;
+.footer>ul {
+	margin: 0;
+	padding: 0;
+	font-weight: normal;
 }
 
-datalist option {
-	font-size: 0.8em;
-	padding: 0.3em 1em;
-	background-color: #ccc;
-	cursor: pointer;
+.footer>ul>li {
+	padding-left: 0;
+	padding-right: 0.5em;
+	display: inline;
+	list-style: none;
 }
 
-/* option active styles */
-datalist option:hover,
-datalist option:focus {
-	color: #fff;
-	background-color: #036;
-	outline: 0 none;
-}
-
-#browserdata option {
-	font-size: 1.8em;
-	padding: 0.3em 1em;
-	background-color: #ccc;
-	cursor: pointer;
+.footer>p {
+	margin: 0;
+	padding: 0;
+	font-weight: normal;
 }
